rosetta/Program-termination/check_correctness.log
../Makefile.generic:9: warning: overriding recipe for target 'program-termination-3'
../Makefile.generic:6: warning: ignoring old recipe for target 'program-termination-3'
../Makefile.generic:9: warning: overriding recipe for target 'program-termination-1'
../Makefile.generic:6: warning: ignoring old recipe for target 'program-termination-1'
../Makefile.generic:14: warning: overriding recipe for target 'program-termination-3'
../Makefile.generic:9: warning: ignoring old recipe for target 'program-termination-3'
../Makefile.generic:14: warning: overriding recipe for target 'program-termination-1'
../Makefile.generic:9: warning: ignoring old recipe for target 'program-termination-1'
../Makefile.generic:17: warning: overriding recipe for target 'program-termination-3'
../Makefile.generic:14: warning: ignoring old recipe for target 'program-termination-3'
../Makefile.generic:17: warning: overriding recipe for target 'program-termination-1'
../Makefile.generic:14: warning: ignoring old recipe for target 'program-termination-1'
../Makefile.generic:21: warning: overriding recipe for target 'program-termination-3'
../Makefile.generic:17: warning: ignoring old recipe for target 'program-termination-3'
../Makefile.generic:21: warning: overriding recipe for target 'program-termination-1'
../Makefile.generic:17: warning: ignoring old recipe for target 'program-termination-1'
../Makefile.generic:24: warning: overriding recipe for target 'program-termination-3'
../Makefile.generic:21: warning: ignoring old recipe for target 'program-termination-3'
../Makefile.generic:24: warning: overriding recipe for target 'program-termination-1'
../Makefile.generic:21: warning: ignoring old recipe for target 'program-termination-1'
make: Circular program-termination-3 <- program-termination-3 dependency dropped.
make: Circular program-termination-1 <- program-termination-3 dependency dropped.
make: Circular program-termination-1 <- program-termination-1 dependency dropped.
make: Circular program-termination-2_mem2reg.cbe.c <- program-termination-3 dependency dropped.
make: Circular program-termination-2_mem2reg.cbe.c <- program-termination-1 dependency dropped.
make: Circular program-termination-2_mem2reg.ll <- program-termination-3 dependency dropped.
make: Circular program-termination-2_mem2reg.ll <- program-termination-1 dependency dropped.
clang -Xclang -disable-O0-optnone -S -emit-llvm -g program-termination-2.c
program-termination-2.c:3:1: error: expected identifier or '('
if(problem){
^
1 error generated.
make: *** [../Makefile.generic:2: program-termination-2.ll] Error 1
